--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,38 +1,48 @@
 @charset "UTF-8";
 
-body{
-    background-image: linear-gradient(to top,#49a09d, #5f2c82);
-}
-
 @media screen and (min-width: 768px) and (max-width:992px) {
+    body{
+        background-image: linear-gradient(to top,#49a09d, #5f2c82);
+    }
     section#login{
-        width: 90vw;
+        width: 80vw;
+        height: 280px;
 
     }   
-    section#login > div#imagem{
+    section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
-        background-position: right top;
     } 
-    section#login> div#formulario{
-        float:right;
-        width: 70%;
+    section#login > div#formulario {
+        float: right;
+        width: 70%;  
     }
 }
 
 @media  screen and (min-width: 992px) {
+    body{
+        background-image: linear-gradient(to top,#49a09d, #5f2c82);
+    }
     section#login{
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem{
-        float: left;
-        width: 40%;
+        float: right;
+        width: 30%;
         height: 100%;
         background-position: center top;
     }
     section#login > div#formulario {
-        float: right;
-        width: 60%;
+        float: left;
+        width: 70%;
+    }
+    #formulario > h1{
+        font-size: 2em;
+    }
+    #formulario > p#frase{
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
