--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,7 @@ Lilás: #5f2c82
 *{
     padding: 0px;
     margin: 0px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
     box-sizing: border-box;
 }
 
@@ -28,32 +28,113 @@ main{
     
 
 }
-#login{
+section#login{
     position: absolute;
     top: 50%;
     left: 50% ;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
+
     width: 250px;
     height: 500px;
     border-radius: 20px;
     background-color: white;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.405);
     
+    
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+
 }
 
 div#imagem{
+    display: block;
     background: #5f2c82 url(../imagem/pexels-igor-visuals-3681805.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 200px;
     background-position: top center;
-    display: block;
+
 }
 
 div#formulario{
     padding: 10px;
     display: block;
+}
+div#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+#formulario > p#frase{
+    font-size: 0.8em;
+    margin-bottom: 10px;
+}
+div.campo{
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    height: 40px;
+    width: 100%;
+    border-radius: 8px;
+    margin: 5px 0px;
+
+}
+
+div.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo input{
+    background-color: #94cfcd;
+    font-size: 1em;
+    width:calc(100% - 44px);
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+
+    transform: translate(44px, -42px);
+}
+div.campo input:focus-within{
+    background-color: white;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background-color:#49a09d ;
+}
+form > input[type=submit]:hover {
+    background-color: #275856;
+
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 6px;
+    margin-top: 5px;
+    background-color: #ffffff;
+    border: 1px solid #49a09d;
+    color: #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+form > a.botao:hover{
+    background-color: #6cfcf7;
+}
+
+form > a.botao >i {
+    font-size: 0.8em;
 }
