--- a/estilos/style.css
+++ b/estilos/style.css
@@ -91,10 +91,11 @@ div.campo > i{
 div.campo input{
     background-color: #94cfcd;
     font-size: 1em;
-    width:calc(100% - 44px);
+    width:calc(100% - 45px);
     height: 100%;
     border-radius: 8px;
     padding: 4px;
+    transform: translateY(-13px);
 
     
 }
